; ModuleID = '/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_7zArcIn.c_SzReadHeader.c'
source_filename = "/home/carl/AnghaBench/hashcat/deps/LZMA-SDK/C/extr_7zArcIn.c_SzReadHeader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@NUM_ADDITIONAL_STREAMS_MAX = common dso_local global i32 0, align 4
@SZ_ERROR_FAIL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*, i32*, i32, i32)* @SzReadHeader to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @SzReadHeader(i32* %0, %struct.TYPE_4__* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i64, align 8
  %17 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  store i32 0, i32* %13, align 4
  %18 = load i32, i32* @NUM_ADDITIONAL_STREAMS_MAX, align 4
  %19 = zext i32 %18 to i64
  %20 = call i8* @llvm.stacksave()
  store i8* %20, i8** %15, align 8
  %21 = alloca i32, i64 %19, align 16
  store i64 %19, i64* %16, align 8
  store i32 0, i32* %12, align 4
  br label %22

22:                                               ; preds = %31, %5
  %23 = load i32, i32* %12, align 4
  %24 = load i32, i32* @NUM_ADDITIONAL_STREAMS_MAX, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %34

26:                                               ; preds = %22
  %27 = load i32, i32* %12, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds i32, i32* %21, i64 %28
  %30 = call i32 @Buf_Init(i32* %29)
  br label %31

31:                                               ; preds = %26
  %32 = load i32, i32* %12, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %12, align 4
  br label %22

34:                                               ; preds = %22
  %35 = load i32*, i32** %7, align 8
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %37 = load i32*, i32** %9, align 8
  %38 = load i32, i32* %10, align 4
  %39 = load i32, i32* %11, align 4
  %40 = call i32 @SzReadHeader2(i32* %35, %struct.TYPE_4__* %36, i32* %37, i32* %21, i32* %13, i32 %38, i32 %39)
  store i32 %40, i32* %14, align 4
  store i32 0, i32* %12, align 4
  br label %41

41:                                               ; preds = %51, %34
  %42 = load i32, i32* %12, align 4
  %43 = load i32, i32* @NUM_ADDITIONAL_STREAMS_MAX, align 4
  %44 = icmp slt i32 %42, %43
  br i1 %44, label %45, label %54

45:                                               ; preds = %41
  %46 = load i32, i32* %12, align 4
  %47 = sext i32 %46 to i64
  %48 = getelementptr inbounds i32, i32* %21, i64 %47
  %49 = load i32, i32* %11, align 4
  %50 = call i32 @Buf_Free(i32* %48, i32 %49)
  br label %51

51:                                               ; preds = %45
  %52 = load i32, i32* %12, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %12, align 4
  br label %41

54:                                               ; preds = %41
  %55 = load i32, i32* %14, align 4
  %56 = call i32 @RINOK(i32 %55)
  %57 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %58 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %57, i32 0, i32 0
  %59 = load i64, i64* %58, align 8
  %60 = icmp ne i64 %59, 0
  br i1 %60, label %61, label %63

61:                                               ; preds = %54
  %62 = load i32, i32* @SZ_ERROR_FAIL, align 4
  store i32 %62, i32* %6, align 4
  store i32 1, i32* %17, align 4
  br label %65

63:                                               ; preds = %54
  %64 = load i32, i32* %14, align 4
  store i32 %64, i32* %6, align 4
  store i32 1, i32* %17, align 4
  br label %65

65:                                               ; preds = %63, %61
  %66 = load i8*, i8** %15, align 8
  call void @llvm.stackrestore(i8* %66)
  %67 = load i32, i32* %6, align 4
  ret i32 %67
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @Buf_Init(i32*) #2

declare dso_local i32 @SzReadHeader2(i32*, %struct.TYPE_4__*, i32*, i32*, i32*, i32, i32) #2

declare dso_local i32 @Buf_Free(i32*, i32) #2

declare dso_local i32 @RINOK(i32) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
